fix navigation flicker on mobile

--- a/source/modules/navigation/navigation.css
+++ b/source/modules/navigation/navigation.css
@@ -78,6 +78,9 @@
   .navigation {
     padding: 0 40px;
     transform: translateY(calc(-1 * var(--mobile-navigation-links) * var(--mobile-navigation-link-height)));
+  }
+
+  .navigation-animating {
     transition: transform 0.5s ease-in-out;
   }
 
